--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,19 @@
   "action": {
     "default_popup": "index.html",
     "default_icon": "vite-js-logo.png"
-  }
+  },
+  "content_scripts": [
+    {
+      "matches": [
+        "http://*/*",
+        "https://*/*"
+      ],
+      "css": [
+        "content_styles.css"
+      ],
+      "js": [
+        "content_scripts.js"
+      ]
+    }
+  ]
 }
